tests/files/type_checker_tests/should_pass/055.cmdr
//Test that not operations type check
x = !true;
