tests/files/type_checker_tests/should_fail/033.cmdr
//Should fail on not equal when types are incompatible
x = true != "true";